# agentic-apps-portfolio

./: .gitignore  README.md  start_all_backends.ps1
agentic-customer-support/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  local.db  package-lock.json  package.json  test-gemini.ts
agentic-portfolio-ui/: index.html  package-lock.json  package.json
agentic-red-teamer/: Dockerfile  README.md  main.py
autonomous-devrel-agent/: .gcloudignore  README.md  main.py  requirements.txt
cloud-security-sentinel/: .gcloudignore  Cargo.toml  Dockerfile  README.md
compliance-pii-sanitizer/: README.md  main.py  requirements.txt
docs/: 02_revenue_recovery_agent.md  03_scientific_research_agent.md  04_security_sentinel_agent.md  05_agentic_customer_support.md  06_devrel_agent.md  08_real_estate_voice_agent.md  10_service_dispatch_voice_agent.md  13_agentic_red_teamer.md  14_model_router_sentinel.md  15_multimodal_qa_agent.md  (+4 more)
procurement-intelligence-agent/: .env.example  .gcloudignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
procurement-intelligence-agent/agents/: graph.py  json_utils.py  mcp_client.py  researcher.py  sql_analyst.py  state.py  supervisor.py  writer.py
procurement-intelligence-agent/api/: auth.py  main.py  rate_limiter.py  schemas.py
procurement-intelligence-agent/api/routes/: query.py
procurement-intelligence-agent/eval/: harness.py  judge.py
procurement-intelligence-agent/eval/datasets/: sample_queries.json
procurement-intelligence-agent/guardrails/: bedrock_guardrails.py  middleware.py  tiers.py
procurement-intelligence-agent/infra/: app.py
procurement-intelligence-agent/infra/stacks/: api_stack.py  bedrock_stack.py  database_stack.py
procurement-intelligence-agent/ingestion/: __init__.py  cli.py
procurement-intelligence-agent/mcp_server/: server.py
procurement-intelligence-agent/mcp_server/tools/: query_database.py  search_docs.py  search_web.py
procurement-intelligence-agent/migrations/: schema.py
procurement-intelligence-agent/retrieval/: embedder.py  indexer.py  retriever.py
procurement-intelligence-agent/sql_agent/: validator.py  vanna_setup.py
procurement-intelligence-agent/tests/: conftest.py  test_agents.py  test_api.py  test_guardrails.py  test_retrieval.py
procurement-intelligence-agent/ui/: app.py
procurement-intelligence-agent/ui/pages/: eval_dashboard.py  query_review.py
(+104 files in other folders)
