[project]
name = "procurement-intelligence-agent"
version = "1.1.0"
description = "Enterprise procurement intelligence via multi-agent AI on AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AI Engineer" }]

dependencies = [
    # LLM Frameworks
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",

    # MCP (server + client protocol integration)
    "fastmcp>=0.4.0",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",

    # Vector DB
    "pinecone-client>=3.0.0",
    "cohere>=5.0.0",                   # reranker

    # Text-to-SQL
    "vanna[chromadb,openai]>=0.7.0",

    # AWS
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-jose[cryptography]>=3.3.0", # JWT
    "passlib[bcrypt]>=1.7.4",
    "sse-starlette>=2.1.0",            # SSE streaming
    "httpx>=0.27.0",
    "slowapi>=0.1.9",                   # Rate limiting

    # Database
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Observability
    "langsmith>=0.1.0",

    # Perplexity / Web Search
    "openai>=1.50.0",                  # Perplexity uses OpenAI-compatible API

    # Data & Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",

    # Document parsing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "rich>=13.0.0",

    # UI
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",    # for FastAPI test client
]

infra = [
    "aws-cdk-lib>=2.160.0",
    "constructs>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
